views/stylesheets/_application.scss
/* ... */
/* @end */

.page-404{
  .row{
    margin-top: $baseline*3;
  }
  .error-header{
    text-align: center;
  }
  .error-copy{
    margin-top: $baseline*2;
  }
}

/* @group media queries Group */
@media only screen and (max-width: 1130px) {
  .page-people {
    .employees {
      li:nth-child(6) .person{
        margin-right: 30px;
      }
    }
  }
}

@media only screen and (max-width: 650px) {

[class*=columns]{
  width: 100%;
  margin-left: 0;
}
#wrap #wrap-footer{
  height: 80px;
}
.row{
  margin-bottom: $baseline;
}
.size3{
  font-size: 38px;
  line-height: $baseline*2;
}
.size4{
  font-size: 38px;
  line-height: $baseline*2;
}


header{
  position: relative;
  height: $baseline*5 +8px;
  nav{
    img{
      float: left;
      padding-top: $baseline +15px;
    }
    ul{
      font-family: "meta-bold", "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
      line-height: 18px;
      width: 50%;
      li{
        float: left;
        width: 100%;
        text-align: right;
        margin: 5px 0;
      }
    }
  }
}


.page-homepage {
  .slideshow {
    margin-top: -15px;
    height: $baseline*8;
    h1 {
      display: none;
    }
    .slides_container {
      li {
        &.slide1 {
          background: $pink url("/images/zebra-small.jpg") no-repeat center $baseline*5;
        }
      }
    }
  }
  .columns2 {
    a {
      margin-bottom: $baseline*2;
    }
    .blog-snipet {

    }
  }
}


.page-work {
  .row:first-child {
    .columns3 {
      margin-top: -25px
    }
    p {
      padding-top: $baseline +25px;
    }
  }
  .case-study {
    padding-top: $baseline;
    margin-bottom: 0;
  }
  .frame {
    margin-bottom: $baseline;
  }
  h3 {
    font-size: 16px;
    line-height: $baseline;
  }
}


.page-products {
  .row:first-child {
    .columns6{
      margin-top: -25px;
    }
  }

  .row:nth-child(2) {
    margin-bottom: 0;
  }

  .frame {
    margin-bottom: $baseline;
  }
  h2 {
    margin-top: $baseline;
    margin-bottom: $baseline;
  }
  hr {
    margin-bottom: $baseline;
  }
  .open-source {
    p{
      margin-top: $baseline;
    }
  }
}

.page-people {
  .people-img {
    .columns6 {
      margin-top: -15px;
      .img{
        height: $baseline*8;
      }
    }
  }
  .people-copy {
    margin-bottom: 0;
  }
  #spotlight {
    .row:first-child {
      margin-bottom: $baseline;
    }
    hr {
      margin-bottom: $baseline;
    }
    .img {
      width: 100%;
      height: $baseline*12;
    }
    h2 {
      margin-top: $baseline;
      margin-bottom: $baseline;
    }
    h3 {
      margin-bottom: $baseline;
      font-size: 16px;
      line-height: $baseline;
    }
    .link {
      margin-bottom: 0;
      a{
        color: $green;
      }
    }
  }

  .employees {
    .row:nth-child(3) {
      margin-bottom: 0;
    }
    .person {
        width: 47.5%;
        margin-left: 5%;
        float: left;
        margin-bottom: $baseline;
        &:nth-child(odd) {
          margin-left: 0;
        }
      p{
        margin-bottom: -5px;
      }
    }
  }
}


.page-thoughts {
  #thoughts-heading {
    margin-top: -15px;
  }
  hr {
    margin-bottom: $baseline;
  }
  .blog-post {
    margin-bottom: $baseline*3;
    .img {
      background: $orange;
      height: $baseline*8;
    }
  }
  .blog-sidebar {
    display: none;
  }
}

} /* media-q end */

/* @end */

